--- a/.github/workflows/update-bot.yml
+++ b/.github/workflows/update-bot.yml
@@ -2,14 +2,21 @@ name: Update Discord Bot
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   update:
     runs-on: [self-hosted, linux, arm64]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Pull latest changes
-        run: git pull
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Python dependencies
+        run: |
+          cd /home/pi/promoscraper
+          /home/pi/promoscraper/venv/bin/pip install -r requirements.txt
+
       - name: Restart Discord Bot
         run: sudo systemctl restart discordbot.service
